Updated linter installation command and gitignore file
The change is more focused on improving the workflow setup for a Go project. The commit updates the linter installation command in GitHub Actions workflow from 'go get' to 'go install', aligning it with the Go best practices. The .gitignore file is also updated to ignore .DS_Store files. These are MacOS-specific files and often don't need to be stored in a repository.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,7 @@ jobs:
           go-version: '^1.20.1' # The Go version to download (if necessary) and use.
       - run: go version
         name: Run Lint
-      - run: go get -u golang.org/x/lint/golint
+      - run: go install golang.org/x/lint/golint
       - run: golint ./...
         name: Run Tests
       - run: go test -v ./...
