--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
         name: Build the Docker image
       - run: docker build -t quabynah1809/quantia-go-banking:latest .
         name: Push the Docker image to the repository
-        uses: docker/build-push-action@v2
+      - uses: docker/build-push-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
