--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,6 @@ jobs:
         with:
           go-version: '^1.20.1' # The Go version to download (if necessary) and use.
       - run: go version
-        name: Build the Docker image
-      - run: docker build -t quabynah1809/quantia-go-banking:latest .
         name: Push the Docker image to the repository
       - uses: docker/build-push-action@v2
         with:
@@ -38,3 +36,4 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: quabynah1809/quantia-go-banking
           tags: latest
+          depends-on: lint-and-test
