Add code coverage summary report to GitHub Actions CI
This commit introduces a code coverage summary report to the 'ci.yml' github actions workflow using the 'irongut/CodeCoverageSummary' action. The addition of this feature allows us to generate and visualize code coverage reports directly within our pull requests ensuring minimum code coverage thresholds are met in every commit. It is set to fail if the code coverage is below 60% and the format is 'markdown'. This visual representation facilitates the understanding and tracking of the code coverage of tests over time.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,19 @@ jobs:
       - run: go install golang.org/x/lint/golint
       - run: golint ./...
         name: Run Tests
-      - run: go test -v ./...
+      - run: go test -v -cover ./...
+        name: Code Coverage Summary Report
+        uses: irongut/CodeCoverageSummary@v1.3.0
+        with:
+          filename: coverage/**/coverage.cobertura.xml
+          badge: true
+          fail_below_min: true
+          format: markdown
+          hide_branch_rate: false
+          hide_complexity: true
+          indicators: true
+          output: both
+          thresholds: '60 80'
 
   deploy-to-dockerhub:
     runs-on: ubuntu-latest
