--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@
 name: CI
 on:
   push:
-    branches: [ dev ]
+    branches: [dev]
   pull_request:
-    branches: [ dev, "quabynah-bilson-patch-*" ]
+    branches: [dev, "quabynah-bilson-patch-*"]
 
 jobs:
   lint-and-test:
@@ -13,11 +13,12 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
         with:
-          go-version: '^1.20.1' # The Go version to download (if necessary) and use.
+          go-version: "^1.20.1" # The Go version to download (if necessary) and use.
       - run: go version
         name: Run Lint
-      - run: go install golang.org/x/lint/golint
-      - run: golint ./...
+      - run: |
+          go install golang.org/x/lint/golint
+          golint ./...
         name: Run Tests
       - run: go test -v -cover ./...
         name: Code Coverage Summary Report
@@ -31,7 +32,7 @@ jobs:
           hide_complexity: true
           indicators: true
           output: both
-          thresholds: '60 80'
+          thresholds: "60 80"
 
   deploy-to-dockerhub:
     runs-on: ubuntu-latest
@@ -39,7 +40,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
         with:
-          go-version: '^1.20.1' # The Go version to download (if necessary) and use.
+          go-version: "^1.20.1" # The Go version to download (if necessary) and use.
       - run: go version
         name: Push the Docker image to the repository
       - uses: docker/build-push-action@v2
