--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       - run: go version
         name: Run Lint
       - run: |
-          go install golang.org/x/lint/golint
+          go get -u golang.org/x/lint/golint
           golint ./...
         name: Run Tests
       - run: go test -v -cover ./...
