--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,20 +15,10 @@ jobs:
         with:
           go-version: "^1.20.1" # The Go version to download (if necessary) and use.
       - run: go version
-        name: Run Tests
-      - run: go test -v -cover ./...
-        name: Code Coverage Summary Report
-      - uses: irongut/CodeCoverageSummary@v1.3.0
-        with:
-          filename: coverage/**/coverage.cobertura.xml
-          badge: true
-          fail_below_min: true
-          format: markdown
-          hide_branch_rate: false
-          hide_complexity: true
-          indicators: true
-          output: both
-          thresholds: "60 80"
+        name: Run coverage
+      - run: go test -race -coverprofile=coverage.out -covermode=atomic
+        name: Upload coverage to Codecov
+      - uses: codecov/codecov-action@v3
 
   deploy-to-dockerhub:
     runs-on: ubuntu-latest
