--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
           go-version: "^1.20.1" # The Go version to download (if necessary) and use.
       - run: go version
         name: Run coverage
-      - run: go test -race -coverprofile=coverage.out -covermode=atomic ./tests/...
+      - run: go test ./tests/... -v -coverprofile=coverage.out -covermode=atomic -coverpkg=./tests/...
         name: Upload coverage to Codecov
       - uses: codecov/codecov-action@v3
         env:
