--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,11 @@
 # A GitHub workflow to automate tests in golang
 name: CI
 on:
-  push:
-    branches: [dev]
+  workflow_dispatch:
   pull_request:
-    branches: [dev, "quabynah-bilson-patch-*"]
+  push:
+    branches:
+      - dev
 
 jobs:
   lint-and-test:
