--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,5 @@
 # A GitHub workflow to automate tests in golang
-name: CI
+name: Continuous Integration
 on:
   workflow_dispatch:
   pull_request:
@@ -24,20 +24,3 @@ jobs:
       - uses: codecov/codecov-action@v3
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-
-  deploy-to-dockerhub:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-go@v4
-        with:
-          go-version: "^1.20.1" # The Go version to download (if necessary) and use.
-      - run: go version
-        name: Push the Docker image to the repository
-      - uses: docker/build-push-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: quabynah1809/quantia-go-banking
-          tags: latest
-          depends-on: lint-and-test
