--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,8 +20,8 @@ jobs:
       - uses: docker/build-push-action@v2
         # use docker file located in the scripts folder
         with:
-          context: ./src/scripts
-          file: Dockerfile
+          context: .
+          file: ./src/scripts/Dockerfile
           push: true
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
