Update Docker build context in CD workflow
Updated the Dockerfile to change the build context from the 'src/scripts' directory to the '../api/' directory. This ensures access to necessary files for the build, providing a more robust CD pipeline.

--- a/src/scripts/Dockerfile
+++ b/src/scripts/Dockerfile
@@ -1,6 +1,6 @@
 FROM golang:1.21-rc-alpine3.18 AS builder
 WORKDIR /app
-COPY . .
+COPY ./src/api/ .
 RUN go build -o /app/bin/ ./cmd/server/...
 
 FROM alpine:latest
