--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           context: .
           file: ./src/scripts/Dockerfile
-          push: true
+          push: false
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: quabynah1809/quantia-go-banking
